--- a/source/sass/blocks/catalog.scss
+++ b/source/sass/blocks/catalog.scss
@@ -14,7 +14,15 @@
   .catalog {
     display: flex;
     flex-direction: row;
-    flex-wrap: wrap;
+    flex-wrap: nowrap;
     background-color: $white;
+    padding-top: 86px;
+    padding-bottom: 59px;
+
+    &__container {
+      width: 100%;
+      display: flex;
+      flex-direction: row;
+    }
   }
 }
