--- a/source/sass/blocks/color.scss
+++ b/source/sass/blocks/color.scss
@@ -1,6 +1,7 @@
 .color {
   &__container {
-    padding-bottom: 30px;
+    padding-bottom: 44px;
+    padding-top: 5px;
   }
 
   &__checkbox {
@@ -31,8 +32,8 @@
     width: 40px;
     height: 40px;
     border: 2px solid $dark-gray;
-    top: -9px;
-    left: -55px;
+    top: -10px;
+    left: -59px;
     content: "";
   }
 
@@ -42,8 +43,8 @@
     background-position: center;
     position: absolute;
     content: "";
-    top: -3px;
-    left: -46px;
+    top: -4px;
+    left: -50px;
     width: 22px;
     height: 22px;
   }
@@ -52,17 +53,27 @@
 
 @media (min-width: $tablet-width) {
   .color {
-    display: flex;
-    justify-content: center;
-    flex-wrap: wrap;
+    position: relative;
     width: 768px;
-    height: 304px;
     background-color: $gray;
+    padding-top: 30px;
+    padding-left: 199px;
+
+    &__container {
+      display: flex;
+      flex-wrap: wrap;
+      position: relative;
+      padding-left: 141px;
+      padding-right: 4px;
+      padding-top: 57px;
+      padding-bottom: 0;
+    }
 
     &__checkbox {
       display: flex;
       flex-wrap: wrap;
       width: 50%;
+      padding-left: 94px;
     }
 
     &__checkbox-item {
@@ -76,20 +87,52 @@
       }
     }
 
+    &__checkbox-item + label::before {
+      position: absolute;
+      width: 54px;
+      height: 52px;
+      border: 2px solid $dark-gray;
+      top: -9px;
+      left: -81px;
+      content: "";
+    }
+
+    &__checkbox-item:checked + label::after {
+      background-image: url("/img/icon-tick.svg");
+      background-repeat: no-repeat;
+      background-position: center;
+      position: absolute;
+      content: "";
+      top: 7px;
+      left: -70px;
+      width: 33px;
+      height: 22px;
+    }
+
     &__label {
       color: $text-black;
       font-size: 19px;
       font-weight: 700;
       line-height: 0.95;
     }
+
+    &__label-checkbox {
+      padding-top: 7px;
+      padding-bottom: 7px;
+    }
   }
 }
 
 @media (min-width: $desktop-width) {
   .color {
-    width: 1150px;
-    height: 228px;
     background-color: $gray;
+
+    &__container {
+      padding-top: 58px;
+      padding-left: 162px;
+      padding-right: 12px;
+      padding-bottom: 0;
+    }
 
     &__checkbox {
       display: flex;
@@ -108,11 +151,19 @@
       }
     }
 
+    &__checkbox-item:checked + label::after {
+      top: 6px;
+      left: -73px;
+    }
+
     &__label {
       color: $text-black;
       font-size: 19px;
       font-weight: 700;
       line-height: 0.95;
+      padding-top: 5px;
+      padding-bottom: 10px;
+      padding-left: 0;
     }
   }
 }
