--- a/source/sass/blocks/contacts.scss
+++ b/source/sass/blocks/contacts.scss
@@ -17,6 +17,13 @@
     padding-top: 36px;
   }
 
+  &__details-row {
+    display: flex;
+    flex-direction: row;
+    padding-top: 4px;
+    padding-bottom: 25px;
+  }
+
   &__details {
     display: flex;
     color: $dark-gray;
@@ -24,18 +31,25 @@
     font-weight: 400;
     line-height: 2;
     padding-top: 19px;
+  }
 
-    &__key {
-      vertical-align: top;
+  &__details-key {
+    width: 30%;
+  }
+
+  &__details-value {
+    paddind-left: 28px;
+    padding-right: 0;
+    width: 60%;
+
+    &--email {
+      border-bottom: 1px solid $mint;
+      text-decoration: none;
+      color: $dark-gray;
     }
 
-    &__value {
-      padding-left: 10px;
-
-      &--email {
-        border-bottom: 1px solid $mint;
-        text-decoration: none;
-      }
+    &--email a {
+      text-decoration: none;
     }
   }
 
@@ -43,7 +57,7 @@
     border: none;
     width: 100%;
     min-width: 320px;
-    margin-top: 90px;
+    padding-top: 11px;
   }
 
   &__button {
@@ -58,10 +72,17 @@
 
 @media (min-width: $tablet-width) {
   .contacts {
+    padding-top: 131px;
+
     &__wrapper {
+      width: 100%;
       display: flex;
       flex-direction: column;
       align-items: center;
+    }
+
+    &__info {
+      width: 100%;
     }
 
     &__title {
@@ -69,36 +90,81 @@
       align-self: center;
       font-size: 43px;
       line-height: 1.16;
+      padding-top: 90px;
+
+      &::after {
+        position: absolute;
+        top: 77px;
+        right: 3px;
+        content: "";
+        width: 47px;
+        height: 81px;
+        background-image: url("/img/icon-flag.svg");
+        background-repeat: no-repeat;
+      }
     }
 
     &__all {
       display: flex;
       justify-content: space-between;
       font-size: 17px;
+      padding-top: 26px;
+      padding-left: 2px;
+      padding-right: 0;
     }
 
     &__details {
-      width: 335px;
+      width: 100%;
       color: $dark-gray;
-      font-size: 15px;
+      font-size: 17px;
       font-weight: 400;
-      line-height: 2;
+      line-height: 1.76;
+    }
+
+    &__details-key {
+      vertical-align: top;
+      width: 23%;
+    }
+
+    &__details-value {
+      padding-left: 0;
+
+      &--email {
+        align-self: self-end;
+        padding-left: 0;
+      }
+    }
+
+    &__details tr {
+      width: 50%;
+    }
+
+    &__details-wrapper {
+      width: 100%;
+      display: flex;
+      flex-grow: 1;
     }
 
     &__map {
       width: 100%;
+      min-width: 768px;
+      padding-top: 29px;
+      padding-bottom: 11px;
+    }
+
+    &__map-img {
+      width: 100%;
+      height: 457px;
+    }
+
+    &__button-btn {
+      padding-bottom: 20px;
     }
 
     &__button {
-      width: 260px;
-      height: 52px;
-      border: 2px solid $dark-gray;
-      background-color: $white;
-      color: $dark-gray;
-      font-size: 18px;
-      font-weight: 700;
-      line-height: 1.11;
-      text-transform: uppercase;
+      padding-right: 40px;
+      padding-left: 40px;
+      margin-top: 42px;
     }
   }
 }
@@ -108,16 +174,20 @@
     display: flex;
     flex-direction: column;
     flex-wrap: wrap;
+    padding-top: 78px;
+    padding-bottom: 32px;
 
     &__wrapper {
-      display: flex;
-      flex-wrap: wrap;
-      flex-direction: row;
+      padding-top: 63px;
+      padding-right: 50%;
+      position: relative;
+      margin-bottom: 70px;
     }
 
     &__info {
       display: flex;
       flex-direction: column;
+      order: -1;
     }
 
     &__title {
@@ -126,42 +196,77 @@
       font-weight: 700;
       line-height: 1.08;
       margin-bottom: 10px;
+      padding-top: 77px;
+      padding-left: 91px;
+
+      &::after {
+        top: 68px;
+        left: -13px;
+      }
     }
 
     &__all {
       flex-direction: column;
       justify-content: flex-start;
+      align-items: flex-end;
       font-size: 15px;
       line-height: 1.76;
+      color: $dark-gray;
     }
 
     &__details {
-      color: $dark-gray;
       font-size: 15px;
       font-weight: 400;
       line-height: 2;
+      padding-top: 7px;
+    }
+
+    &__details tr {
+      width: 66%;
+    }
+
+    &__details-key {
+      align-self: self-end;
+      padding-left: 0;
+    }
+
+    &__details-value {
+      padding-left: 0;
+      padding-right: 0;
+    }
+
+    &__details-wrapper {
+      flex-direction: column;
+      align-items: flex-end;
+      padding-bottom: 50px;
+      padding-right: 0;
     }
 
     &__map {
       flex-basis: 50%;
-      position: relative;
-      min-height: 457px;
+      position: absolute;
+      right: -524px;
+      top: 39px;
+      min-height: auto;
       width: 100%;
+      order: -2;
+    }
+
+    &__map-img {
+      width: 525px;
+      height: 457px;
+    }
+
+    &__button-btn {
+      padding-left: 59px;
+      padding-bottom: 0;
     }
 
     &__button {
       flex: none;
-      width: 348px;
-
       margin-top: auto;
-      height: 52px;
-      border: 2px solid $dark-gray;
-      background-color: $white;
-      color: $dark-gray;
-      font-size: 18px;
-      font-weight: 700;
-      line-height: 1.11;
-      text-transform: uppercase;
+      margin-bottom: 0;
+      order: -1;
     }
   }
 }
