--- a/source/sass/blocks/copyright.scss
+++ b/source/sass/blocks/copyright.scss
@@ -1,4 +1,5 @@
 .copyright {
+  position: relative;
   display: flex;
   width: 260px;
   min-height: 79px;
@@ -6,10 +7,6 @@
   margin-top: 23px;
   justify-content: space-between;
   align-items: center;
-
-  &__logo {
-    display: none;
-  }
 
   &__text {
     color: $text-black;
@@ -24,36 +21,50 @@
   }
 
   &__link-logo {
-    margin-right: 39px;
-    margin-top: 3px;
+    position: absolute;
+    right: 38px;
+    bottom: 20px;
   }
 }
 
 @media (min-width: $tablet-width) {
   .copyright {
-    &__logo {
-      width: 102px;
-      height: 34px;
-    }
+    display: flex;
+    min-height: 79px;
+    border-top: 1px solid $light-gray;
+    margin-top: 11px;
+    justify-content: space-between;
+    align-items: center;
+    padding-right: 0;
+    padding-left: 2px;
+    padding-top: 2px;
 
     &__text {
       color: $text-black;
       font-size: 19px;
       font-weight: 700;
       line-height: 0.95;
+      margin: 0;
+      padding: 0;
+      margin-left: 37px;
+      margin-top: 0;
+      padding-bottom: 3px;
     }
 
-    &__link {
-      background-color: $mint;
+    &__link-logo {
+      right: 30px;
+      bottom: 19px;
     }
   }
 }
 
 @media (min-width: $desktop-width) {
   .copyright {
-    &__logo {
-      width: 102px;
-      height: 34px;
+    padding-left: 195px;
+    padding-bottom: 9px;
+
+    &__link {
+      padding-left: 28px;
     }
 
     &__text {
@@ -63,8 +74,9 @@
       line-height: 0.95;
     }
 
-    &__link {
-      background-color: $mint;
+    &__link-logo {
+      right: -155px;
+      bottom: 24px;
     }
   }
 }
