--- a/source/sass/blocks/features-list.scss
+++ b/source/sass/blocks/features-list.scss
@@ -3,6 +3,7 @@
 
   &__advantages {
     @include list;
+    padding-right: 10px;
   }
 
   &__item {
@@ -19,7 +20,7 @@
       background: url("/img/icon-feature-flower.svg");
       position: absolute;
       content: "";
-      top: 2px;
+      top: 11px;
       left: 9px;
       width: 32px;
       height: 37px;
@@ -88,45 +89,70 @@
 
 @media (min-width: $tablet-width) {
   .features-list {
+    padding-top: 11px;
+
     &__advantages {
       display: flex;
       flex-wrap: wrap;
     }
 
     &__item {
-      max-width: 50%;
+      width: 50%;
       color: $text-black;
       font-size: 20px;
       font-weight: 700;
       line-height: 1.1;
+      padding-bottom: 20px;
+      padding-right: 33px;
 
-      &--eco {
-        background-image: url("/img/icon-feature-flower.svg");
+      &--eco::after {
+        top: 17px;
+        left: 9px;
       }
 
       &--style {
-        background-image: url("/img/icon-feature-money.svg");
         order: 2;
       }
 
+      &--style::after {
+        top: 15px;
+        left: 0;
+      }
+
       &--like {
-        background-image: url("/img/icon-feature-heart.svg");
         order: 4;
       }
 
+      &--like::after {
+        top: 19px;
+        left: 9px;
+      }
+
       &--love {
-        background-image: url("/img/icon-feature-ball.svg");
         order: 1;
       }
 
+      &--love::after {
+        top: 21px;
+        left: 4px;
+      }
+
       &--native {
-        background-image: url("/img/icon-feature-rocket.svg");
         order: 3;
       }
 
+      &--native::after {
+        top: 20px;
+        left: -5px;
+      }
+
       &--gift {
-        background-image: url("/img/icon-feature-gift.svg");
         order: 5;
+      }
+
+      &--gift::after {
+        top: 15px;
+        left: 3px;
       }
     }
   }
@@ -134,6 +160,9 @@
 
 @media (min-width: $desktop-width) {
   .features-list {
+    padding-left: 176px;
+    padding-right: 162px;
+
     &__advantages {
       display: flex;
       flex-wrap: wrap;
@@ -147,30 +176,6 @@
       font-weight: 700;
       line-height: 1.1;
       background-repeat: no-repeat;
-
-      &--eco {
-        background-image: url("/img/icon-feature-flower.svg");
-      }
-
-      &--style {
-        background-image: url("/img/icon-feature-money.svg");
-      }
-
-      &--like {
-        background-image: url("/img/icon-feature-heart.svg");
-      }
-
-      &--love {
-        background-image: url("/img/icon-feature-ball.svg");
-      }
-
-      &--native {
-        background-image: url("/img/icon-feature-rocket.svg");
-      }
-
-      &--gift {
-        background-image: url("/img/icon-feature-gift.svg");
-      }
     }
   }
 }
