--- a/source/sass/blocks/features.scss
+++ b/source/sass/blocks/features.scss
@@ -10,23 +10,18 @@
     padding: 0;
     padding-top: 28px;
     padding-bottom: 20px;
-    padding-left: 30px;
     margin-left: -2px;
   }
 }
 
 @media (min-width: $tablet-width) {
   .features {
-    box-sizing: border-box;
-    max-width: 678px;
-    margin-left: auto;
-    margin-right: auto;
-
     &__title {
       color: $text-black;
       font-size: 43px;
       font-weight: 700;
       line-height: 1.16;
+      padding-top: 77px;
     }
   }
 }
@@ -38,6 +33,8 @@
       font-size: 53px;
       font-weight: 700;
       line-height: 1.08;
+      padding-top: 47px;
+      padding-left: 171px;
     }
   }
 }
