--- a/source/sass/blocks/form.scss
+++ b/source/sass/blocks/form.scss
@@ -2,7 +2,7 @@
   background-color: $white;
   display: flex;
   flex-direction: column;
-  padding-top: 25px;
+  padding-top: 21px;
   padding-bottom: 55px;
 
   &__wrapper {
@@ -18,8 +18,14 @@
     display: flex;
     position: relative;
     flex-wrap: wrap;
-    padding-left: 9px;
     padding-bottom: 11px;
+    padding-top: 0;
+    padding-left: 0;
+    margin-bottom: 8px;
+  }
+
+  &__type-title {
+    margin-left: -13px;
   }
 
   &__intro {
@@ -31,7 +37,6 @@
     font-size: 13px;
     font-weight: 400;
     line-height: 1.85;
-    width: 245px;
     margin-top: 23px;
     margin-right: auto;
     margin-bottom: 0;
@@ -47,21 +52,33 @@
     width: 260px;
     padding: 0;
     margin: 0;
-    margin-bottom: 34px;
+    margin-bottom: 32px;
 
     &::after {
       content: "";
       position: absolute;
-      right: 0;
-      top: 7px;
+      right: 3px;
+      top: 9px;
       width: 198px;
       height: 1px;
       background-color: $mint;
     }
   }
 
+  &__legend-tel {
+    margin-bottom: 35px;
+  }
+
+  &__legend-email {
+    margin-bottom: 36px;
+  }
+
+  &__legend-additional {
+    margin-bottom: 24px;
+  }
+
   &__radio {
-    padding-left: 48px;
+    padding-left: 62px;
     padding-right: 10px;
     margin-bottom: 25px;
   }
@@ -76,8 +93,8 @@
     height: 40px;
     border-radius: 50%;
     border: 2px solid $dark-gray;
-    top: -9px;
-    left: -60px;
+    top: -6px;
+    left: -62px;
     content: "";
   }
 
@@ -86,8 +103,8 @@
     position: absolute;
     width: 16px;
     height: 16px;
-    left: -48px;
-    top: 3px;
+    left: -50px;
+    top: 6px;
     background-color: $mint;
     border-radius: 50%;
   }
@@ -115,6 +132,10 @@
     padding-top: 0;
   }
 
+  &__personal-container:last-child {
+    padding-bottom: 3px;
+  }
+
   &__personal-wrapper {
     margin-bottom: 0;
     margin-left: 0;
@@ -131,12 +152,10 @@
     font-weight: 700;
     line-height: 1.06;
     position: relative;
-
-    margin-bottom: 16px;
+    margin-bottom: 12px;
     padding-left: 0;
     display: flex;
     align-items: flex-start;
-    width: 180px;
   }
 
   &__personal-name {
@@ -147,7 +166,7 @@
     width: 260px;
     height: 38px;
     padding-bottom: 7px;
-    margin-bottom: 7px;
+    margin-bottom: 9px;
   }
 
   &::placeholder {
@@ -168,6 +187,7 @@
     width: 260px;
     border: none;
     padding: 0;
+    padding-bottom: 32px;
 
     &__field {
       padding-bottom: 25px;
@@ -177,11 +197,12 @@
   &__input-tel {
     box-shadow: inset 0 -2px 0 $text-black;
     box-sizing: border-box;
-    padding-right: 40px;
     padding-left: 0;
-    padding-bottom: 15px;
+    padding-right: 0;
+    padding-bottom: 4px;
 
     &::placeholder {
+      position: relative;
       opacity: 0.3;
       color: $dark-gray;
       font-size: 17px;
@@ -193,7 +214,6 @@
   &__email {
     width: 260px;
     border: none;
-    margin-top: 8px;
     padding: 0;
     margin-bottom: 17px;
 
@@ -206,7 +226,8 @@
     box-shadow: inset 0 -2px 0 $text-black;
     box-sizing: border-box;
     padding-right: 40px;
-    padding-bottom: 15px;
+    margin-top: 0;
+    padding-bottom: 4px;
 
     &::placeholder {
       opacity: 0.3;
@@ -247,7 +268,7 @@
     font-size: 14px;
     font-weight: 400;
     line-height: 1.14;
-    margin-top: 0;
+    margin-top: 8px;
     margin-bottom: 32px;
   }
 
@@ -266,24 +287,140 @@
 
 @media (min-width: $tablet-width) {
   .form {
+    padding-top: 29px;
+    color: $dark-gray;
+    font-size: 17px;
+    font-weight: 400;
+    line-height: 1.76;
+
     &__intro {
-      color: $dark-gray;
+      padding-top: 58px;
+      padding-left: 18px;
+      padding-right: 59px;
+    }
+
+    &__intro-text {
       font-size: 17px;
       font-weight: 400;
       line-height: 1.76;
     }
 
+    &__wrapper {
+      &--color {
+        position: relative;
+        background-color: $gray;
+        padding-bottom: 29px;
+      }
+
+      &--name {
+        padding-top: 55px;
+        padding-left: 24%;
+      }
+
+      &--contacts {
+        background-color: $gray;
+        padding-top: 63px;
+        padding-left: 24%;
+        padding-bottom: 13px;
+      }
+
+      &--wishes {
+        padding-top: 51px;
+      }
+
+      &--note {
+        display: flex;
+        flex-direction: row-reverse;
+        margin-top: 8px;
+        padding-top: 44px;
+        padding-left: 0;
+      }
+    }
+
     &__legend {
+      position: absolute;
+      top: 50px;
+      left: 13px;
       color: $mint;
       font-size: 17px;
       font-weight: 700;
       line-height: 0.94;
       text-transform: uppercase;
+
+      &::after {
+        display: none;
+      }
+
+      &--name {
+        top: 1px;
+        left: -163px;
+      }
+
+      &--tel {
+        top: -1px;
+        left: -167px;
+      }
+
+      &--email {
+        left: -166px;
+        top: -2px;
+      }
+
+      &--additional {
+        top: 16px;
+        left: -12px;
+      }
+    }
+
+    &__type-container {
+      position: relative;
+      padding-left: 151px;
+      padding-right: 0;
+      padding-top: 35px;
+    }
+
+    &__type-title {
+      position: absolute;
+      top: 45px;
+      left: -13px;
+    }
+
+    &__color-title {
+      top: 65px;
+      left: 20px;
+    }
+
+    &__radio {
+      margin-bottom: 51px;
+      padding-left: 83px;
+      padding-top: 8px;
     }
 
     &__radio-button {
       border: 2px solid $dark-gray;
       background-color: $white;
+    }
+
+    &__radio-button + label::before {
+      position: absolute;
+      width: 54px;
+      height: 55px;
+      border-radius: 50%;
+      border: 2px solid $dark-gray;
+      top: -17px;
+      left: -82px;
+      content: "";
+    }
+
+    &__radio-button:checked + label::after {
+      content: "";
+      position: absolute;
+      width: 24px;
+      height: 24px;
+      left: -67px;
+      top: 0;
+      background-color: $mint;
+      border-radius: 50%;
     }
 
     &__radio-label {
@@ -294,6 +431,7 @@
     }
 
     &__personal {
+      position: relative;
       display: flex;
       flex-direction: column;
       align-items: flex-start;
@@ -301,10 +439,16 @@
       padding-left: 0;
     }
 
+    &__personal-container {
+      width: 100%;
+    }
+
     &__personal-wrapper {
       display: flex;
       flex-direction: row;
-      padding-left: 30px;
+      padding-left: 3px;
+      padding-right: 21px;
+      padding-bottom: 30px;
     }
 
     &__personal-label {
@@ -313,10 +457,12 @@
       font-size: 19px;
       font-weight: 700;
       line-height: 0.95;
+      padding-right: 25px;
     }
 
     &__personal-name {
       box-shadow: inset 0 -2px 0 $text-black;
+      flex-grow: 1;
 
       &::placeholder {
         opacity: 0.3;
@@ -333,11 +479,19 @@
       background-color: $gray;
     }
 
+    &__tel {
+      position: relative;
+      padding-bottom: 45px;
+    }
+
     &__input-tel {
       display: flex;
       flex-direction: row;
       justify-content: space-between;
       box-shadow: inset 0 -2px 0 $text-black;
+      background-color: $gray;
+      padding-bottom: 13px;
+      width: 501px;
 
       &::placeholder {
         opacity: 0.3;
@@ -348,11 +502,18 @@
       }
     }
 
+    &__email {
+      position: relative;
+    }
+
     &__input-email {
       display: flex;
       flex-direction: row;
       justify-content: space-between;
       box-shadow: inset 0 -2px 0 $text-black;
+      background-color: $gray;
+      padding-bottom: 13px;
+      width: 501px;
 
       &::placeholder {
         opacity: 0.3;
@@ -361,6 +522,11 @@
         font-weight: 400;
         line-height: 0.95;
       }
+    }
+
+    &__additional {
+      position: relative;
+      padding-left: 23%;
     }
 
     &__additional-textarea {
@@ -370,6 +536,7 @@
       box-shadow: inset 0 -2px 0 $text-black;
       border: 2px solid $dark-gray;
       background-color: $white;
+      width: 501px;
 
       &::placeholder {
         opacity: 0.3;
@@ -386,14 +553,17 @@
       font-weight: 400;
       line-height: 1.76;
       padding: 0;
+      padding-right: 16px;
       margin: 0;
       margin-top: 11px;
       margin-left: 31px;
     }
 
+    &__submit {
+      padding-right: 106px;
+    }
+
     &__submit-button {
-      width: 230px;
-      height: 52px;
       border: 2px solid $dark-gray;
       background-color: $white;
       color: $dark-gray;
@@ -412,6 +582,39 @@
       font-size: 17px;
       font-weight: 400;
       line-height: 1.76;
+      padding-left: 225px;
+      padding-right: 10px;
+      padding-top: 125px;
+    }
+
+    &__wrapper {
+      &--type {
+        padding-left: 220px;
+      }
+
+      &--color {
+        padding-bottom: 17px;
+      }
+
+      &--name {
+        padding-left: 193px;
+        padding-top: 64px;
+        padding-right: 201px;
+      }
+
+      &--contacts {
+        padding-left: 222px;
+      }
+
+      &--wishes {
+        padding-left: 0;
+        padding-right: 287px;
+      }
+
+      &--note {
+        padding-top: 44px;
+        padding-right: 209px;
+      }
     }
 
     &__legend {
@@ -420,6 +623,38 @@
       font-weight: 700;
       line-height: 0.94;
       text-transform: uppercase;
+
+      &--name {
+        top: 3px;
+        left: -85px;
+      }
+
+      &--tel {
+        top: -3px;
+        left: -112px;
+      }
+
+      &--email {
+        left: -113px;
+      }
+
+      &--additional {
+        left: 110px;
+        top: 17px;
+      }
+    }
+
+    &__type-title {
+      left: -109px;
+    }
+
+    &__color-title {
+      left: 110px;
+      top: 65px;
+    }
+
+    &__type-container {
+      padding-left: 0;
     }
 
     &__personal-wrapper {
@@ -444,11 +679,15 @@
       font-size: 19px;
       font-weight: 700;
       line-height: 0.95;
+      padding-right: 0;
+      padding-left: 26px;
     }
 
     &__personal-name {
       position: relative;
       box-shadow: inset 0 -2px 0 $text-black;
+      margin-left: 25px;
+      padding-left: 17px;
 
       &::placeholder {
         opacity: 0.3;
@@ -470,6 +709,8 @@
       flex-direction: row;
       justify-content: space-between;
       box-shadow: inset 0 -2px 0 $text-black;
+      width: 700px;
+      padding-left: 17px;
 
       &::placeholder {
         opacity: 0.3;
@@ -485,6 +726,8 @@
       flex-direction: row;
       justify-content: space-between;
       box-shadow: inset 0 -2px 0 $text-black;
+      width: 700px;
+      padding-left: 17px;
 
       &::placeholder {
         opacity: 0.3;
@@ -495,6 +738,10 @@
       }
     }
 
+    &__additional {
+      padding-left: 26%;
+    }
+
     &__additional-textarea {
       display: flex;
       flex-direction: row;
@@ -502,6 +749,7 @@
       box-shadow: inset 0 -2px 0 $text-black;
       border: 2px solid $dark-gray;
       background-color: $white;
+      width: 700px;
 
       &::placeholder {
         opacity: 0.3;
@@ -517,11 +765,14 @@
       font-size: 17px;
       font-weight: 400;
       line-height: 1.76;
+      padding-left: 27px;
+    }
+
+    &__submit {
+      padding-right: 112px;
     }
 
     &__submit-button {
-      width: 230px;
-      height: 52px;
       border: 2px solid $dark-gray;
       background-color: $white;
       color: $dark-gray;
