--- a/source/sass/blocks/main-menu.scss
+++ b/source/sass/blocks/main-menu.scss
@@ -6,7 +6,7 @@
     background-repeat: no-repeat;
     background-position: 50% 50%;
     position: absolute;
-    top: 15px;
+    top: 29px;
     right: 23px;
     padding: 0;
     z-index: 2;
@@ -19,10 +19,11 @@
     @include list;
     display: flex;
     flex-direction: column;
-    list-style: none;
-    background-color: $light-gray;
+    background-color: $gray;
     text-decoration: none;
     align-items: flex-start;
+    padding: 0;
+    margin: 0;
   }
 
   &--closed {
@@ -33,7 +34,7 @@
       background-repeat: no-repeat;
       background-position: 50% 50%;
       position: absolute;
-      top: 24px;
+      top: 29px;
       right: 26px;
       padding: 0;
       z-index: 2;
@@ -59,54 +60,55 @@
 }
 
 @media (min-width: $tablet-width) {
-  .category-list {
-    display: flex;
-    flex-direction: row;
-    color: $text-black;
-    font-size: 15px;
-    font-weight: 700;
-    line-height: 1.6;
-  }
+  .main-menu {
+    &__button-icon {
+      display: none;
+    }
 
-  .user-list {
-    display: flex;
-    flex-direction: row;
-    justify-content: flex-end;
-    color: $text-black;
-    font-size: 17px;
-    font-weight: 700;
-    line-height: 1.41;
-  }
+    &--closed {
+      .main-menu__list {
+        display: flex;
+        position: absolute;
+        background-color: transparent;
+        text-decoration: none;
+      }
 
-  .desktop-list {
-    display: none;
+      .main-menu__category-list {
+        @include list;
+        position: absolute;
+        top: 110px;
+        left: 40px;
+        display: flex;
+        flex-direction: row;
+        flex-wrap: nowrap;
+        align-items: center;
+        font-size: 15px;
+        font-weight: 700;
+        line-height: 1.6;
+      }
+
+      .main-menu__user-list {
+        @include list;
+        position: absolute;
+        right: 62px;
+        top: 35px;
+        display: flex;
+        flex-direction: row;
+        justify-content: flex-end;
+        color: $text-black;
+        font-size: 17px;
+        font-weight: 700;
+        line-height: 1.41;
+      }
+
+      .main-menu__user-list p {
+        display: none;
+      }
+
+      .main-menu__desktop-list {
+        display: none;
+      }
+    }
   }
 }
 
-@media (min-width: $desktop-width) {
-  .category-list {
-    color: $text-black;
-    font-size: 17px;
-    font-weight: 700;
-    line-height: 1.41;
-  }
-
-  .user-list {
-    display: flex;
-    flex-direction: row;
-    justify-content: flex-end;
-    color: $text-black;
-    font-size: 17px;
-    font-weight: 700;
-    line-height: 1.41;
-  }
-
-  .desktop-list {
-    display: flex;
-    height: 15px;
-    color: $text-black;
-    font-size: 15px;
-    font-weight: 700;
-    line-height: 1.6;
-  }
-}
