--- a/source/sass/blocks/page-footer.scss
+++ b/source/sass/blocks/page-footer.scss
@@ -12,6 +12,10 @@ $footer-bgcolor: #f1f1f1;
     margin: auto;
     padding-top: 23px;
   }
+
+  &__logo {
+    display: none;
+  }
 }
 
 @media (min-width: $tablet-width) {
@@ -19,13 +23,40 @@ $footer-bgcolor: #f1f1f1;
     display: flex;
     justify-content: center;
     width: 768px;
-    min-height: 143px;
+
+    &__wrapper {
+      flex-direction: row;
+      width: 100%;
+    }
+
+    &__logo {
+      display: block;
+      padding-right: 37px;
+    }
+
+    &__logo-link {
+      width: 102px;
+      height: 34px;
+    }
+
+    &__logo-img {
+      width: 102px;
+      height: 34px;
+      padding-left: 25px;
+      padding-right: 30px;
+    }
   }
 }
 
 @media (min-width: $desktop-width) {
   .page-footer {
     width: 1250px;
-    min-height: 143px;
+    height: 143px;
+
+    &__wrapper {
+      width: 100%;
+      padding-top: 0;
+      margin: 0;
+    }
   }
 }
