--- a/source/sass/blocks/page-header.scss
+++ b/source/sass/blocks/page-header.scss
@@ -4,7 +4,6 @@
 
   &__container {
     width: 100%;
-    height: 79px;
     margin-left: auto;
     margin-right: auto;
     box-shadow: 0 1px 0 $light-gray, inset 0 1px 0 $light-gray;
@@ -13,9 +12,9 @@
 
 @media (min-width: $tablet-width) {
   .page-header {
-    display: flex;
-    flex-direction: row;
-    width: 768px;
+    &__container {
+      width: 100%;
+    }
   }
 }
 
@@ -23,6 +22,5 @@
   .page-header {
     display: flex;
     flex-direction: row;
-    width: 1250px;
   }
 }
