--- a/source/sass/blocks/page-main.scss
+++ b/source/sass/blocks/page-main.scss
@@ -20,7 +20,9 @@
       background-image: url("/img/hero-mobile@1x.jpg");
       background-repeat: no-repeat;
       background-position: center -50px;
+      background-size: auto;
       padding-top: 62px;
+      height: 283px;
     }
   }
 
@@ -33,10 +35,17 @@
     font-size: 27px;
     font-weight: 700;
     line-height: 1.11;
-    padding-top: 69px;
+    padding-top: 70px;
     padding-bottom: 69px;
-    padding-left: 0;
-    padding-right: 0;
+    padding-left: 19px;
+    padding-right: 24px;
+
+    &--main {
+      padding-top: 6;
+      padding-bottom: 69px;
+      padding-left: 25px;
+      padding-right: 30px;
+    }
   }
 
   &__header-title span {
@@ -44,32 +53,88 @@
   }
 }
 
-// @media (min-width: $tablet-width) {
-//   .page-main {
-//     &__header-title {
-//       &--main {
-//         width: 494px;
-//         height: 95px;
-//         color: $text-black;
-//         font-size: 43px;
-//         font-weight: 700;
-//         line-height: 1.16;
-//       }
-//     }
-//   }
-// }
+@media (min-width: $tablet-width) {
+  .page-main {
+    &__container {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      padding: 0;
+      background-color: $gray;
+    }
 
-// @media (min-width: $desktop-width) {
-//   .page-main {
-//     &__header-title {
-//       &--main {
-//         width: 604px;
-//         height: 112px;
-//         color: $text-black;
-//         font-size: 53px;
-//         font-weight: 700;
-//         line-height: 1.08;
-//       }
-//     }
-//   }
-// }
+    &__header {
+      background-color: $gray;
+      max-width: 768px;
+      padding-bottom: 7px;
+      margin-left: auto;
+      margin-right: auto;
+
+      &--index {
+        height: 746px;
+        background-image: url("/img/hero-mobile@1x.jpg");
+        background-repeat: no-repeat;
+        background-position: center -50px;
+        background-size: cover;
+        padding-top: 62px;
+        padding-left: 63px;
+        padding-right: 40px;
+      }
+    }
+
+    &__header-title {
+      margin: 0;
+      margin-top: 0;
+      text-align: center;
+      align-self: center;
+      color: $text-black;
+      font-size: 43px;
+      font-weight: 700;
+      line-height: 50px;
+      padding-top: 92px;
+      padding-bottom: 69px;
+      padding-left: 0;
+      padding-right: 24px;
+    }
+  }
+}
+
+@media (min-width: $desktop-width) {
+  .page-main {
+    &__container {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      padding: 0;
+      background-color: $gray;
+    }
+
+    &__header {
+      background-color: $gray;
+      max-width: 1150px;
+      padding-bottom: 7px;
+      margin-left: auto;
+      margin-right: auto;
+
+      &--index {
+        width: 1250px;
+      }
+    }
+
+    &__header-title {
+      padding-top: 94px;
+      padding-left: 28px;
+      font-size: 53px;
+      font-weight: 700;
+      line-height: 1.08;
+
+      &--main {
+        color: $text-black;
+        padding-left: 215px;
+        padding-right: 238px;
+      }
+    }
+  }
+}
