--- a/source/sass/blocks/popular-item.scss
+++ b/source/sass/blocks/popular-item.scss
@@ -41,7 +41,6 @@
   }
 
   &__table {
-    width: 260px;
     border-collapse: collapse;
     color: $dark-gray;
     font-size: 15px;
@@ -50,17 +49,15 @@
   }
 
   &__table-key {
-    width: 98px;
     border-bottom: 1px solid $light-gray;
     padding-bottom: 20px;
   }
 
   &__table-value {
-    width: 43px;
-    height: 31px;
     border-bottom: 1px solid $light-gray;
     padding-bottom: 20px;
-    padding-right: 27px;
+    padding-right: 34px;
+    padding-left: 28px;
   }
 
   &__image {
@@ -81,202 +78,237 @@
     font-size: 17px;
     font-weight: 700;
     line-height: 1.41;
-    margin-bottom: 25px;
+    margin-bottom: 28px;
   }
 
   &__button {
     padding-top: 17px;
-    padding-bottom: 17px;
+    padding-bottom: 11px;
     padding-left: 85px;
     padding-right: 84px;
   }
 }
 
-// @media (min-width: $tablet-width) {
-//   .popular-item {
-//     &__description {
-//       display: flex;
-//       flex-direction: row;
-//     }
+@media (min-width: $tablet-width) {
+  .popular-item {
+    background-color: $white;
+    padding-top: 46px;
+    padding-bottom: 41px;
+    position: relative;
 
-//     &__header {
-//       display: flex;
-//       flex-direction: row;
-//       justify-content: space-between;
-//     }
+    &__description {
+      display: flex;
+      flex-direction: row;
+    }
 
-//     &__type {
-//       width: 420px;
-//       height: 42px;
-//       color: $text-black;
-//       font-size: 43px;
-//       font-weight: 700;
-//       line-height: 1.16;
-//     }
+    &__header {
+      display: flex;
+      flex-direction: row;
+      justify-content: space-between;
+      padding-top: 6px;
+    }
 
-//     &__title {
-//       width: 70px;
-//       height: 33px;
-//       color: $mint;
-//       font-size: 17px;
-//       font-weight: 700;
-//       line-height: 1;
-//       text-transform: uppercase;
-//     }
+    &__type {
+      color: $text-black;
+      font-size: 43px;
+      font-weight: 700;
+      line-height: 1.16;
+      padding-left: 0;
+      padding-right: 0;
+      padding-top: 11px;
+    }
 
-//     &__description-inner {
-//       display: flex;
-//       flex-direction: column;
-//       width: 50%;
-//     }
+    &__title {
+      width: 10%;
+      color: $mint;
+      font-size: 17px;
+      font-weight: 700;
+      line-height: 1;
+      text-transform: uppercase;
+      padding-top: 12px;
+      margin-right: 30px;
+    }
 
-//     &__text {
-//       width: 282px;
-//       height: 77px;
-//       color: $dark-gray;
-//       font-size: 17px;
-//       font-weight: 400;
-//       line-height: 1.76;
-//     }
+    &__description-inner {
+      display: flex;
+      flex-direction: column;
+      width: 50%;
+    }
 
-//     &__table {
-//       color: $dark-gray;
-//       font-size: 15px;
-//       font-weight: 400;
-//       line-height: 1.33;
-//     }
+    &__text {
+      color: $dark-gray;
+      font-size: 17px;
+      font-weight: 400;
+      line-height: 1.76;
+      padding-top: 38px;
+      padding-left: 0;
+      padding-right: 0;
+      margin-right: 43px;
+      margin-bottom: 40px;
+    }
 
-//     &__table-key {
-//       width: 67px;
-//       height: 92px;
-//     }
+    &__table {
+      color: $dark-gray;
+      font-size: 15px;
+      font-weight: 400;
+      line-height: 1.33;
+    }
 
-//     &__table-value {
-//       width: 129px;
-//       height: 93px;
-//     }
+    &__table-key {
+      padding-bottom: 13px;
+      padding-top: 6px;
+      padding-left: 0;
+      padding-right: 0;
+    }
 
-//     &__image {
-//       width: 333px;
-//       height: 404px;
-//       padding-bottom: 0;
-//       order: 3;
-//     }
+    &__table-value {
+      padding-bottom: 13px;
+      padding-top: 6px;
+      padding-left: 30px;
+      padding-right: 0;
+    }
 
-//     &__footer {
-//       width: 336px;
-//       height: 114px;
-//       margin-top: auto;
-//       order: 2;
-//     }
+    &__image {
+      padding-top: 36px;
+      padding-bottom: 0;
+      order: 3;
+    }
 
-//     &__price {
-//       width: 144px;
-//       height: 21px;
-//       color: $dark-gray;
-//       font-size: 20px;
-//       font-weight: 700;
-//       line-height: 1.2;
-//     }
+    &__image-img {
+      width: 333px;
+      height: 404px;
+    }
 
-//     &__button {
-//       width: 292px;
-//       height: 52px;
-//       border: 2px solid $dark-gray;
-//       background-color: $white;
-//       color: $dark-gray;
-//       font-size: 17px;
-//       font-weight: 700;
-//       line-height: 1.18;
-//       text-transform: uppercase;
-//     }
-//   }
-// }
+    &__footer {
+      margin-top: -37px;
+      order: 2;
+      width: 44%;
+    }
 
-// @media (min-width: $desktop-width) {
-//   .popular-item {
-//     display: flex;
-//     flex-direction: column;
-//     background-color: $white;
-//     width: 1048px;
+    &__price {
+      color: $dark-gray;
+      font-size: 20px;
+      font-weight: 700;
+      line-height: 1.2;
+      padding-top: 29px;
+      padding-left: 0;
+      padding-right: 6px;
+      margin-bottom: 34px;
+    }
 
-//     &__header {
-//       display: flex;
-//       justify-content: flex-start;
-//       align-items: center;
-//     }
+    &__button {
+      padding-top: 17px;
+      padding-bottom: 11px;
+      padding-left: 85px;
+      padding-right: 88px;
+    }
+  }
+}
 
-//     &__type {
-//       width: 515px;
-//       height: 51px;
-//       color: $text-black;
-//       font-size: 53px;
-//       font-weight: 700;
-//       line-height: 1.08;
-//       order: 2;
-//     }
+@media (min-width: $desktop-width) {
+  .popular-item {
+    display: flex;
+    flex-direction: column;
+    background-color: $white;
 
-//     &__title {
-//       width: 70px;
-//       height: 33px;
-//       color: $mint;
-//       font-size: 17px;
-//       font-weight: 700;
-//       line-height: 1;
-//       text-transform: uppercase;
-//       order: 1;
-//     }
+    &__container {
+      margin-bottom: 69px;
+      padding-top: 24px;
+    }
 
-//     &__text {
-//       width: 282px;
-//       height: 77px;
-//       color: $dark-gray;
-//       font-size: 17px;
-//       font-weight: 400;
-//       line-height: 1.76;
-//     }
+    &__header {
+      display: flex;
+      justify-content: flex-start;
+      align-items: center;
+      padding-top: 64px;
+      padding-left: 0;
+    }
 
-//     &__table {
-//       color: $dark-gray;
-//       font-size: 15px;
-//       font-weight: 400;
-//       line-height: 1.33;
-//     }
+    &__type {
+      padding-left: 13px;
+      padding-top: 5px;
+      color: $text-black;
+      font-size: 53px;
+      font-weight: 700;
+      line-height: 1.08;
+      order: 2;
+      z-index: 5;
+    }
 
-//     &__table-key {
-//       width: 67px;
-//       height: 92px;
-//     }
+    &__title {
+      color: $mint;
+      font-size: 17px;
+      font-weight: 700;
+      line-height: 1;
+      text-transform: uppercase;
+      order: 1;
+      padding-top: 0;
+      padding-left: 51px;
+      width: 12%;
+    }
 
-//     &__table-value {
-//       width: 129px;
-//       height: 93px;
-//     }
+    &__description-inner {
+      padding-left: 171px;
+      padding-right: 8px;
+    }
 
-//     &__image {
-//       width: 525px;
-//       height: 636px;
-//     }
+    &__text {
+      color: $dark-gray;
+      font-size: 17px;
+      font-weight: 400;
+      line-height: 1.76;
+      padding-top: 44px;
+      padding-left: 6px;
+      padding-right: 0;
+      margin-bottom: 48px;
+    }
 
-//     &__price {
-//       width: 144px;
-//       height: 21px;
-//       color: $dark-gray;
-//       font-size: 20px;
-//       font-weight: 700;
-//       line-height: 1.2;
-//     }
+    &__table {
+      color: $dark-gray;
+      font-size: 15px;
+      font-weight: 400;
+      line-height: 1.33;
+    }
 
-//     &__button {
-//       width: 292px;
-//       height: 52px;
-//       border: 2px solid $dark-gray;
-//       background-color: $white;
-//       color: $dark-gray;
-//       font-size: 17px;
-//       font-weight: 700;
-//       line-height: 1.18;
-//       text-transform: uppercase;
-//     }
-//   }
-// }
+    &__image {
+      width: 525px;
+      height: 636px;
+      margin-top: -153px;
+      margin-left: 3px;
+      padding-top: 37px;
+    }
+
+    &__image-img {
+      width: 525px;
+      height: 636px;
+    }
+
+    &__footer {
+      margin-top: -98px;
+    }
+
+    &__price {
+      margin-top: 0;
+      margin-bottom: 34px;
+      padding-left: 181px;
+      color: $dark-gray;
+      font-size: 20px;
+      font-weight: 700;
+      line-height: 1.2;
+    }
+
+    &__footer-wrapper {
+      padding-left: 176px;
+    }
+
+    &__button {
+      border: 2px solid $dark-gray;
+      background-color: $white;
+      color: $dark-gray;
+      font-size: 17px;
+      font-weight: 700;
+      line-height: 1.18;
+      text-transform: uppercase;
+    }
+  }
+}
