--- a/source/sass/blocks/reviews.scss
+++ b/source/sass/blocks/reviews.scss
@@ -4,10 +4,6 @@
   flex-direction: column;
   position: relative;
 
-  &__container {
-    margin-right: auto;
-  }
-
   &__title {
     color: $text-black;
     font-size: 25px;
@@ -15,12 +11,16 @@
     line-height: 1.2;
     margin: 0;
     padding: 0;
-    padding-top: 24px;
+    padding-top: 31px;
   }
 
   &__create {
-    margin-top: 37px;
+    margin-top: 42px;
     margin-bottom: 50px;
+    padding-left: 0;
+  }
+
+  &__create-btn {
     padding-top: 15px;
     padding-bottom: 13px;
     padding-left: 81px;
@@ -33,33 +33,39 @@
   .reviews {
     position: relative;
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
+    padding-top: 89px;
+
+    &__container {
+      display: flex;
+      flex-wrap: wrap;
+    }
 
     &__items-wrapper {
       width: 100%;
     }
 
     &__title {
-      width: 179px;
-      height: 33px;
       color: $text-black;
       font-size: 43px;
       font-weight: 700;
       line-height: 1.16;
       order: -2;
+      padding-top: 27px;
+      padding-right: 115px;
     }
 
     &__create {
-      width: 175px;
-      height: 52px;
-      border: 2px solid $dark-gray;
-      background-color: $white;
-      color: $dark-gray;
-      font-size: 17px;
-      font-weight: 700;
-      line-height: 1.18;
-      text-transform: uppercase;
       order: -1;
+      padding-left: 195px;
+      padding-top: 29px;
+      margin-top: 0;
+      margin-bottom: 0;
+    }
+
+    &__create-btn {
+      padding-left: 34px;
+      padding-right: 42px;
     }
   }
 }
@@ -70,32 +76,27 @@
     display: flex;
     flex-direction: row;
     justify-content: center;
+    padding-top: 92px;
+    padding-left: 184px;
+    padding-right: 0;
+    margin-bottom: 142px;
 
     &__items-wrapper {
       width: 100%;
     }
 
     &__title {
-      width: 218px;
-      height: 40px;
       color: $text-black;
       font-size: 53px;
       font-weight: 700;
       line-height: 1.08;
       order: -2;
+      padding-left: 34px;
     }
 
     &__create {
-      width: 175px;
-      height: 52px;
-      border: 2px solid $dark-gray;
-      background-color: $white;
-      color: $dark-gray;
-      font-size: 17px;
-      font-weight: 700;
-      line-height: 1.18;
-      text-transform: uppercase;
-      order: -1;
+      padding-left: 368px;
+      padding-top: 36px;
     }
   }
 }
