--- a/source/sass/blocks/slider.scss
+++ b/source/sass/blocks/slider.scss
@@ -12,7 +12,7 @@
 
   &__navigation {
     display: flex;
-    margin-bottom: 30px;
+    margin-bottom: 44px;
     margin-top: 31px;
   }
 
@@ -44,18 +44,20 @@
 
     &__navigation {
       position: absolute;
-      right: 0;
-      bottom: 0;
+      right: 41px;
+      bottom: -70px;
 
       &__arrow {
         &--previous {
           width: 50px;
           height: 26px;
+          padding-left: 15px;
         }
 
         &--next {
           width: 50px;
           height: 26px;
+          padding-right: 12px;
         }
       }
     }
@@ -70,8 +72,8 @@
 
     &__navigation {
       position: absolute;
-      right: 0;
-      bottom: 0;
+      right: 60px;
+      bottom: -72px;
 
       &__arrow {
         &--previous {
