CSS animation fixed, button sizes changed, input styles improved, map size changed

--- a/source/sass/blocks/color.scss
+++ b/source/sass/blocks/color.scss
@@ -30,7 +30,7 @@
       border: 2px solid $mint;
     }
 
-    &:active::before {
+    &:focus::before {
       border: 2px solid $gray;
     }
   }
