--- a/source/sass/blocks/page-main.scss
+++ b/source/sass/blocks/page-main.scss
@@ -129,7 +129,7 @@
 
       &--index {
         background-image: url("/img/hero-desktop@1x.jpg");
-        width: 1250px;
+        width: 100%;
       }
     }
 
