--- a/source/sass/blocks/contacts.scss
+++ b/source/sass/blocks/contacts.scss
@@ -65,15 +65,19 @@ $contacts-active: #d6ebe4;
 
   &__map {
     border: none;
-    width: 320px;
+    width: 100%;
     height: 457px;
     min-width: 320px;
     padding-top: 11px;
   }
 
+  &__button-btn {
+    width: 100%;
+  }
+
   &__button {
-    padding-right: 53px;
-    padding-left: 53px;
+    padding-left: 50px;
+    padding-right: 50px;
     margin-top: 35px;
     margin-bottom: 39px;
 
