--- a/source/sass/blocks/logo.scss
+++ b/source/sass/blocks/logo.scss
@@ -1,9 +1,9 @@
 .logo {
-  display: block;
+  display: flex;
   margin: 0 auto;
   padding-bottom: 20px;
   padding-top: 27px;
-  padding-left: 87px;
+  justify-content: center;
 
   &__image {
     width: 86px;
@@ -25,6 +25,7 @@
     display: flex;
     flex-direction: row;
     padding-left: 0;
+    justify-content: flex-start;
 
     &__image {
       width: 113px;
