--- a/source/sass/blocks/popular-item.scss
+++ b/source/sass/blocks/popular-item.scss
@@ -50,14 +50,17 @@
 
   &__table-key {
     border-bottom: 1px solid $light-gray;
-    padding-bottom: 20px;
+    padding-bottom: 10px;
+    padding-top: 10px;
   }
 
   &__table-value {
     border-bottom: 1px solid $light-gray;
-    padding-bottom: 20px;
+    padding-bottom: 10px;
+    padding-top: 10px;
     padding-right: 34px;
     padding-left: 28px;
+    width: 100%;
   }
 
   &__image {
